--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
@@ -13,54 +14,88 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    background-color: hsl(185, 41%, 84%);
+}
+
+.title {
+    position: absolute;
+    top: 8rem;
+    font-size: 2rem;
+    letter-spacing: 6px;
+    line-height: 1;
+    color: hsl(186, 14%, 43%);
 }
 
 .container {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 5rem;
-    border: 2px solid rebeccapurple;
-    border-radius: 10px;
+    padding: 2rem;
+    /* border: 2px solid rebeccapurple; */
+    border-radius: 25px;
+    background-color: white;
 }
 
 .input_fields {
-    margin: 1rem;
-    padding: 1rem;
-    border: 2px solid rebeccapurple;
+    margin-right: 2rem;
+    padding-left: 1rem;
+    /* border: 2px solid rebeccapurple; */
     height: 400px;
     width: 400px;
     border-radius: 10px;
+    color: hsl(186, 14%, 43%);
+}
+
+.input_form {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    gap: 2rem;
 }
 
 .output_fields {
-    margin: 1rem;
-    padding: 1rem;
+    margin-left: 1rem;
+    padding: 3rem;
     /* border: 2px solid rebeccapurple; */
     color: whitesmoke;
     background-color: hsl(183, 100%, 15%);
     height: 400px;
     width: 400px;
-    border-radius: 10px;
+    border-radius: 15px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.bill_amount p,
 .select_percent p,
-.no_of_people p {
-    margin-bottom: 1rem;
+.bill_amount label,
+.no_of_people label {
+    display: inline-block;
+    margin: 1rem 0;
 }
 
 input {
     text-align: end;
-    width: 360px;
-    height: 35px;
+    width: 100%;
+    height: 3rem;
+    font-size: 1.7rem;
+    border-radius: 10px;
+    padding: 0.5rem;
+    border: none;
+    color: hsl(183, 100%, 15%);
+    background-color: hsl(189, 41%, 97%);
 }
+
+input::placeholder {
+    color: hsl(183, 100%, 15%);
+}
+
+
+/* .icons {
+    position: relative;
+    top: -2rem;
+    left: 1rem;
+} */
 
 .buttons {
     display: grid;
@@ -69,19 +104,20 @@ input {
     gap: 1rem;
 }
 
-.buttons:last-child {
-    color: #000;
-}
-
 .btn {
     border: none;
     font-size: 1.2rem;
     border-radius: 5px;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding: 0.8rem 0;
     background: hsl(183, 100%, 15%);
     cursor: pointer;
     color: whitesmoke;
+}
+
+.output_section {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
 }
 
 .tip_amount,
@@ -90,22 +126,52 @@ input {
     justify-content: space-between;
 }
 
+.tip_amount {
+    padding-top: 1rem;
+    padding-bottom: 0;
+}
+
+.total {
+    padding-top: -1rem;
+    padding-bottom: 0;
+}
+
 .text_amount span {
     color: hsl(184, 14%, 56%);
     font-size: 0.8rem;
 }
 
 .num_amount {
-    font-size: 2rem;
+    font-size: 3rem;
     color: hsl(172, 67%, 45%);
 }
 
 .reset_btn button {
-    width: 330px;
+    width: 100%;
     height: 50px;
     align-content: center;
+    border: none;
+    border-radius: 5px;
     background-color: rebeccapurple;
     color: hsl(183, 100%, 15%);
     background-color: hsl(172, 67%, 45%)!important;
+    position: relative;
+    right: 10px;
     cursor: pointer;
+}
+
+.attribution {
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
+    top: 95vh;
+    letter-spacing: 2px;
+}
+
+.attribution a {
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+}
+
+.attribution a:visited {
+    color: blue;
 }
