--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 .title {
     position: absolute;
-    top: 8rem;
+    top: 2.5rem;
     font-size: 2rem;
     letter-spacing: 6px;
     line-height: 1;
@@ -88,6 +88,7 @@ input {
 
 input::placeholder {
     color: hsl(183, 100%, 15%);
+    font-size: 1rem;
 }
 
 
